fix the header2 spacing. Unify the getFieldById so its all #1 based.

--- a/src/org/ramadda/repository/htdocs/display/display.css
+++ b/src/org/ramadda/repository/htdocs/display/display.css
@@ -197,6 +197,10 @@ svg > g > g:last-child { pointer-events: none }
 
 }
 
+.display-header-span {
+    display:none;
+}
+
 
 .display-animation-tick {
    width:4px;
